[add] title + photo

--- a/index.html
+++ b/index.html
@@ -13,11 +13,29 @@
     <div class="pattern-title">
       <img src="img/logo.svg" alt="The Booleaner" title="The Booleaner">
     </div>
-
   </header>
 
   <main>
+    
+    <div>
+      <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
+      </h1>
+      <span class="lightweight">
+        Scritto da <a href="#">The Booleaner</a>
+        <br>
+        10/10/2020
+      </span>
+    </div>
 
+    <div class="photo-tim">
+      <img src="img/tim-1.jpg" alt="Tim Berners-Lee">
+      <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
+      <span class="photo-explanation">
+        1st Photo: Gianniperignocco foundation by Jimmy <br> 2nd Photo: Wikipedia by Jimmy2
+      </span>
+    </div>
+
+    
   </main>
 
   <footer>
