--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Arimo:ital@0;1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>The Booleaner</title>
 </head>
@@ -77,7 +80,10 @@
   </main>
 
   <footer>
-
+    <!-- suggerimenti -->
+    <h3>Potrebbero Interessarti</h3>
+    <div class="suggestion first">lorem ipsum</div>
+    <div class="suggestion second">lorem ipsum</div>
   </footer>
 
   
